Adiciona registo funcional, links, erros e tira hover do logo

--- a/app/assets/stylesheets/custom.sass.erb
+++ b/app/assets/stylesheets/custom.sass.erb
@@ -9,3 +9,12 @@
 
 ._login, ._signup
   margin-top: 13%
+
+.navbar-b h1
+  font-family: 'Merienda One', 'cursives'
+  padding: 0px
+  margin: 0 0 0 10px
+  font-size: 28px
+  line-height: 1em
+  height: 80px
+  line-height: 80px
