--- a/app/views/users/registrations/new.slim
+++ b/app/views/users/registrations/new.slim
@@ -10,36 +10,29 @@
               header
                 h4
                   i.fa.fa-pencil style="color: #333"  Informações pessoais
-                fieldset
+                - if flash.first
+                  .alert.alert-danger
+                    = flash.first[1]
+                = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
                   hr
                   .control-group
-                    label.control-label for="name"
-                      | Nome
-                    .controls.form-group
-                      input#name.col-xs-12 name="name" type="text"
+                    = f.label :name, :class => "control-label"
+                    = f.text_field :name, :autofocus => true, :class => "col-xs-12"
                   .control-group
-                    label.control-label for="email"
-                      | Email
-                    .controls.form-group
-                      input#email.col-xs-12 name="email" type="text"
+                    = f.label :email, :class => "control-label"
+                    = f.email_field :email, :class => "col-xs-12"
                   .control-group
-                    label.control-label for="phone"
-                      | Telemóvel
-                    .controls.form-group
-                      input#phone.col-xs-12 name="phone" type="text"
+                    = f.label :phone, :class => "control-label"
+                    = f.text_field :phone, :class => "col-xs-12"
                   .control-group
-                    label.control-label for="password"
-                      | Palavra-passe
-                    .controls.form-group
-                      input#password.col-xs-12 name="password" type="password"
+                    = f.label :password, :class => "control-label"
+                    = f.password_field :password, :class => "col-xs-12"
                   .control-group
-                    label.control-label for="password2"
-                      | Confirmar palavra-passe
-                    .controls.form-group
-                      input#password2.col-xs-12 name="password2" type="password"
-                  button.btn.btn-success.btn-lg.pull-right data-original-title=".btn .btn-success .btn-lg" data-placement="top" type="button"
-                    | Registar
-
-
-
+                    = f.label :password_confirmation, :class => "control-label"
+                    = f.password_field :password_confirmation, :class => "col-xs-12"
+                  br/
+                  .control-group
+                    = f.submit "Registar", :class =>  "btn btn-success btn-lg pull-right"
+                  br/
+                  br/
 = render "shared/main_footer"
