Adiciona registo funcional, links, erros e tira hover do logo

--- a/app/views/pages/home.slim
+++ b/app/views/pages/home.slim
@@ -11,16 +11,23 @@
                   li.slider_item.text-align-center
                     div style="padding:140px 0 40px 0"
                       h2.hero
-                        | Gestão de projectos like a boss!
+                        | Gestão de Trabalhos Práticos
                         span.colored .
-                      p.lead Com o GereTPs é possível fazer a gestão das suas disciplinas e dos seus projectos!
+                      p.lead 
                     = image_tag("sample_screen.jpg",  :alt => "screen")
                   li.slider_item.text-align-center
                     div style="padding:140px 0 40px 0"
                       h2.hero
-                        | Gestão de projectos like a boss!
+                        | Gestão de Unidades Curriculares
                         span.colored .
-                      p.lead Com o GereTPs é possível fazer a gestão das suas disciplinas e dos seus projectos!
+                      p.lead 
+                    = image_tag("sample_screen.jpg", :alt => "screen")
+                  li.slider_item.text-align-center
+                    div style="padding:140px 0 40px 0"
+                      h2.hero
+                        | Publicação de Trabalhos Práticos 
+                        span.colored .
+                      p.lead 
                     = image_tag("sample_screen.jpg", :alt => "screen")
               .clear
   .joobstrab_area.top_area
@@ -33,15 +40,18 @@
             .col-md-4
               i.fa.fa-user.fa-4x
               h5 Estudantes
-              p Gere os teus projectos índividuais e de grupo com a maior comodidade e apoio possível! Publica os teus projectos e faz com que o teu trabalho seja reconhecido!
+              p Simplifique a submissão dos seus projetos, organize as suas entregas e mantenha-se atento às próximas fases dos seus projetos. 
+              p Publique os seus trabalhos práticos e veja o seu trabalho reconhecido!
             .col-md-4
               i.fa.fa-user-md.fa-4x
               h5 Docentes
-              p Faça a gestão dos projectos e unidades curriculares que lecciona, assim como dos seus alunos e turnos! Deixe a nossa plataforma tornar-lhe a vida mais fácil!
+              p Faça a gestão dos projetos e unidades curriculares que leciona, assim como dos seus alunos e turnos. 
+              p Simplifique os processos de criação, divulgação, correção e avaliação de um projeto!
             .col-md-4
               i.fa.fa-users.fa-4x
-              h5 Toda a gente!
-              p Todos os projectos publicados poderão ser acedidos por qualquer utilizador da plataforma, permitindo assim a difusão e livre acesso a informação de todas as áreas!
+              h5 Comunidade
+              p Consulte facilmente projetos de todas as áreas de uma forma cómoda e organizada sem precisar de qualquer registo.
+              p Mantenha-se atento aos melhores projetos desenvolvidos por alunos.
         .clear
   .joobstrab_area.main_area
     .joobstrap_section.sourrounding_wrapper.text-center
@@ -51,10 +61,10 @@
             .col-md-12
               .row
                 .col-xs-9
-                  h4 Começa já a fazer a gestão dos teus projectos!
+                  h4 Comece já a fazer a gestão dos seus projetos!
                 .col-xs-3
                   button.btn.btn-info.btn-xl data-original-title=".btn .btn-success .btn-lg" data-placement="top" type="button"
-                    | Registar
+                    | Registe-se
   .joobstrab_area.main_area
     #main_top.joobstrap_section.sourrounding_wrapper
       .inner_wrapper
@@ -62,23 +72,24 @@
           .row
             .col-md-12
               h2.module-title
-                span> A melhor escolha para
+                span A melhor escolha para os 
                 | estudantes!
-              p.lead.text-center Gere os teus projectos índividuais e de grupo com a maior comodidade e apoio possível! Publica os teus projectos e faz com que o teu trabalho seja reconhecido!
+              p.lead.text-center 
+              br
               hr
           .row
             .col-md-3
-              h5 Integração em UCs
-              p Consulta as tuas unidades curriculares e os projectos associados
+              h5 Projetos
+              p Consulte todas as informações dos seus projetos e a calendarização das próximas fases.
               hr
-                h5 Gestão de projectos
-                p Gere os projectos das unidades curriculares em que estás inscrito
+              h5 Entregas
+              p Submeta facilmente os seus trabalhos práticos e receba uma confirmação da sua validade.
             .col-md-3
-              h5 Gestão de grupos
-              p Cria os teus grupos de trabalho de forma fácil e intuitiva
+              h5 Grupos
+              p Crie os seus grupos de trabalho de forma fácil e intuitiva para que o trabalho comece da melhor forma.
               hr
-                h5 Submissão de fases
-                p Entrega facilmente os teus trabalhos e espera pelas avaliações!
+              h5 Avaliações
+              p Mantenha-se atento ao lançamento das avaliações em consulte-as em diferentes formatos.
             .col-md-6
               = image_tag("student.png", :alt => "screen")
           .clear
@@ -88,35 +99,36 @@
           .row
             .col-md-12
               h2.module-title
-                span> E para
-                | professores
-                span>  também!
-              p.lead.text-center Gere os teus projectos índividuais e de grupo com a maior comodidade e apoio possível! Publica os teus projectos e faz com que o teu trabalho seja reconhecido!
+                span E para os 
+                | docentes
+                span  também!
+              p.lead.text-center 
+              br
               hr
           .row
             .col-md-6
               = image_tag("teacher.png", :alt => "screen")
             .col-md-3
-              h5 Gestão de UCs
-              p Crie turnos e projectos dentro de cada unidade curricular
+              h5 U. Curriculares
+              p Adicione alunos, organize-os em turnos e adicione docentes responsáveis.
               hr
-                h5 Gestão de turnos
-                p Crie os turnos e faça a gestão e distribuição dos alunos
+              h5 Projetos
+              p Crie as fases dos projetos, adicione restrições às entregas e adicione testes para facilitar a avaliação.
             .col-md-3
-              h5 Gestão de projectos
-              p Crie projectos dentro das UCs e avalie os alunos
+              h5 Entregas
+              p Consulte, organize e faça download de todas as entregas. Consulte os resultados dos testes.
               hr
-                h5 Gestão de pautas
-                p Faça a gestão das pautas através das avaliações dos projectos
-                      .clear
+              h5 Avaliações
+              p Avalie facilmente os as entregas, individualmente ou em grupo, e gere instantaneamente as pautas.
+            .clear
     #main_bottom.joobstrap_section.sourrounding_wrapper.text-center
       .inner_wrapper
         .container
           .row
             .col-md-12
               h2.module-title
-                span Conheça
-                |  A Equipa :v
-              p.lead Meter a foto dos 3 mosqueteiros de EL :v
+                span Conheça a 
+                | equipa
+              p.lead 
               .clear
 = render "shared/main_footer"
