--- a/app/views/users/registrations/new.slim
+++ b/app/views/users/registrations/new.slim
@@ -7,28 +7,25 @@
           .col-md-7
           .col-md-5
             section.widget._signup
-              header
-                h4
-                  i.fa.fa-pencil style="color: #333"  Informações pessoais
-                - if flash.first
-                  .alert.alert-danger
-                    = flash.first[1]
+              header.text-align-center
+                h4 style="color: #333" Informações pessoais
+                = render "users/shared/errors"
+              .body
                 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-                  hr
                   .control-group
-                    = f.label :name, :class => "control-label"
+                    = f.label :name, "Nome", :class => "control-label"
                     = f.text_field :name, :autofocus => true, :class => "col-xs-12"
                   .control-group
-                    = f.label :email, :class => "control-label"
+                    = f.label :email, "Email", :class => "control-label"
                     = f.email_field :email, :class => "col-xs-12"
                   .control-group
-                    = f.label :phone, :class => "control-label"
+                    = f.label :phone, "Telemóvel", :class => "control-label"
                     = f.text_field :phone, :class => "col-xs-12"
                   .control-group
-                    = f.label :password, :class => "control-label"
+                    = f.label :password, "Password", :class => "control-label"
                     = f.password_field :password, :class => "col-xs-12"
                   .control-group
-                    = f.label :password_confirmation, :class => "control-label"
+                    = f.label :password_confirmation, "Confirmação da Password", :class => "control-label"
                     = f.password_field :password_confirmation, :class => "col-xs-12"
                   br/
                   .control-group
