--- a/app/assets/stylesheets/bootstrap-original/_forms.scss
+++ b/app/assets/stylesheets/bootstrap-original/_forms.scss
@@ -42,7 +42,7 @@ input[type="search"] {
 // Position radios and checkboxes better
 input[type="radio"],
 input[type="checkbox"] {
-  margin: 4px 0 0;
+  margin: 4px 10px 0 10px;
   margin-top: 1px \9; /* IE8-9 */
   line-height: normal;
 }
