--- a/app/views/users/registrations/new.slim
+++ b/app/views/users/registrations/new.slim
@@ -1,6 +1,6 @@
 body.login-bg
   .login-wrapper
-    .logo-login.bounceIn.animation-delay8
+    .logo-login.bounceIn
     .login-widget.animation-delay1
       .panel.panel-default
         .panel-heading
@@ -10,29 +10,30 @@ body.login-bg
           = form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-login") do |f|
             .control-group.text-center
               = f.label "Tipo de conta", style: "margin-right: 10px"  
-
-              = select(nil, :type, options_for_select([["Student", "student"], ['Teacher', "teacher"]], 2) )
+              = select nil, :type, options_for_select([["Estudante", "student"], ['Docente', "teacher"]], 2)
             .form-group
               = f.label :name, "Nome"
               = f.text_field :name, autofocus: true, class: "form-control input-sm bounceIn animation-delay2"
             .form-group
               = f.label :email, "Email"
               = f.email_field :email, class: "form-control input-sm bounceIn animation-delay3 "
-            .form-group#identifier style="display:none"
+            .form-group#identifier 
               = label :identifier, "Número de aluno"
-              = text_field_tag :identifier, nil, class: "form-control input-sm bounceIn animation-delay3 "
+              = text_field_tag :identifier, nil, class: "form-control input-sm bounceIn animation-delay4 "
             .form-group
               = f.label :phone, "Telemóvel"
-              = f.text_field :phone, class: "form-control input-sm bounceIn animation-delay4"
+              = f.text_field :phone, class: "form-control input-sm bounceIn animation-delay5"
             .form-group
               = f.label :password, "Palavra-passe" 
-              = f.password_field :password, :class => "form-control input-sm bounceIn animation-delay5"
+              = f.password_field :password, :class => "form-control input-sm bounceIn animation-delay6"
             .form-group
               = f.label :password_confirmation, "Confirmar palavra-passe"
-              = f.password_field :password_confirmation, class: "form-control input-sm bounceIn animation-delay6"
+              = f.password_field :password_confirmation, class: "form-control input-sm bounceIn animation-delay7"
             .seperator
             hr/
             .form-group
               = link_to "Já criou conta? Faça login", login_path, class: "pull-left"
               .controls.text-right
-                = f.submit "Registar" , class: "btn btn-success btn-sm bounceIn animation-delay7 login-link pull-right"
+                = f.submit "Registar" , class: "btn btn-success btn-sm bounceIn animation-delay8 login-link pull-right"
+  script src="assets/jquery-1.10.2.min.js"
+  script src="assets/registration.coffee"
