Issue: application.js e application.sass

--- a/app/views/students/dashboard.slim
+++ b/app/views/students/dashboard.slim
@@ -1,8 +1,7 @@
-body.overflow-hidden
-  #overlay.transparent
-  #wrapper.preload
+body
+  #wrapper
     #top-nav.fixed.skin-6
-      a.brand href="#"
+      a.brand href="#{s_dashboard_path}"
         span Gere
         span.text-toggle TPs
       button#sidebarToggle.navbar-toggle.pull-left type="button"
@@ -129,13 +128,3 @@ body.overflow-hidden
       .main-header.clearfix
         .page-title
           h3.no-margin Dashboard
-  a#scroll-to-top.hidden-print href=""
-    i.fa.fa-chevron-up
-  script src="assets/jquery-1.10.2.min.js"
-  script src="assets/bootstrap.min.js"
-  script src="assets/modernizr.min.js"
-  script src="assets/pace.min.js"
-  script src="assets/jquery.popupoverlay.min.js"
-  script src="assets/jquery.slimscroll.min.js"
-  script src="assets/jquery.cookie.min.js"
-  script src="assets/endless.js"
