--- a/app/views/teachers/dashboard.slim
+++ b/app/views/teachers/dashboard.slim
@@ -2,7 +2,7 @@ body.overflow-hidden
   #overlay.transparent
   #wrapper.preload
     #top-nav.fixed.skin-6
-      a.brand href="#"
+      a.brand href="t_dashboard_path"
         span Gere
         span.text-toggle TPs
       button#sidebarToggle.navbar-toggle.pull-left type="button"
@@ -171,13 +171,3 @@ body.overflow-hidden
       .main-header.clearfix
         .page-title
           h3.no-margin Dashboard
-  a#scroll-to-top.hidden-print href=""
-    i.fa.fa-chevron-up
-  script src="assets/jquery-1.10.2.min.js"
-  script src="assets/bootstrap.min.js"
-  script src="assets/modernizr.min.js"
-  script src="assets/pace.min.js"
-  script src="assets/jquery.popupoverlay.min.js"
-  script src="assets/jquery.slimscroll.min.js"
-  script src="assets/jquery.cookie.min.js"
-  script src="assets/endless.js"
