Project: Shows para os diferentes tipos de projetos

--- a/app/views/projects/simple_widget/_index.slim
+++ b/app/views/projects/simple_widget/_index.slim
@@ -1,2 +1,2 @@
 - projects.each do |project|
-  = render "projects/simple_widget/show", project: project, type: type
+    = render "projects/simple_widget/show_#{type}", project: project, type: type
