--- a/app/views/projects/simple_widget/_show_active.slim
+++ b/app/views/projects/simple_widget/_show_active.slim
@@ -1,7 +1,7 @@
 li.list-group-item.clearfix
   .row
     .col-lg-1.col-md-1.col-xs-2
-      .activity-icon.small class="bg-#{type}"
+      .activity-icon.small class="bg-warning"
         i.fa.fa-file
     .col-lg-11.col-md-11.col-xs-10
       .row
