--- a/app/views/students/dashboard.slim
+++ b/app/views/students/dashboard.slim
@@ -8,9 +8,9 @@
   .padding-md    
     .row
       .col-md-8 
-        = render "projects/simple_widget", title: "Projetos a decorrer", projects: @projects.active_projects, type: "warning"
-        = render "projects/simple_widget", title: "Próximos projetos", projects: @projects.upcoming_projects, type: "default"
-        = render "projects/simple_widget", title: "Últimos projetos", projects: @projects.latest_projects                               
+        = render "projects/simple_widget", title: "Projetos a decorrer", projects: @projects.active_projects, type: "active"
+        = render "projects/simple_widget", title: "Próximos projetos", projects: @projects.upcoming_projects, type: "upcoming"
+        = render "projects/simple_widget", title: "Últimos projetos", projects: @projects.latest_projects, type: "latest"                               
 
       .col-md-4
         = render "notifications/simple_widget", title: "Últimas notificações", notifications: @notifications
