--- a/app/views/notifications/simple_widget/_show.slim
+++ b/app/views/notifications/simple_widget/_show.slim
@@ -1,9 +1,13 @@
 li.list-group-item.clearfix
-  .activity-icon.bg-primary.small
-    i.fa.fa-info
-  .pull-left.m-left-sm
-    span #{notification.title}
-    br
-      small.text-muted
-        i.fa.fa-plus-square  #{notification.body}
-        i.fa.fa-clock-o  #{notification.date.ago}
+  .row-widget
+    .icon-widget
+      .activity-icon.bg-primary.small
+        i.fa.fa-info
+    .info-widget
+      .pull-left.m-left-sm
+        span #{notification.title}
+        br
+          small.text-muted
+            i.fa.fa-quote-left  #{notification.body}
+            br
+            i.fa.fa-clock-o  À cerca de #{notification.ago}
