--- a/app/views/projects/simple_widget/_show_active.slim
+++ b/app/views/projects/simple_widget/_show_active.slim
@@ -1,27 +1,27 @@
 li.list-group-item.clearfix
-  .row
-    .col-lg-1.col-md-1.col-xs-2
+  .row-widget
+    .icon-widget
       .activity-icon.small class="bg-warning"
         i.fa.fa-file
-    .col-lg-11.col-md-11.col-xs-10
+    .info-widget
       .row
         .col-md-12
           span #{project.name}
-        .col-md-5
+        .col-md-4
           small.text-muted
             i.fa.fa-folder-open-o   
               b  UC:  
               = project.subject.name
-        .col-md-3
+        .col-md-4
           small.text-muted
             i.fa.fa-clock-o  
               b  Próxima entrega: 
-              | 15/11/2014
+              = date_or_undef project.next_delivery
         .col-md-4
           small.text-muted
             i.fa.fa-tasks  
               b  Progresso:
           .progress.progress-striped.active style="width: 20%; height:8px; margin:0 10px 0 10px; display:inline-block;"
-            .progress-bar style="width: 66%"
+            .progress-bar style="width: #{(project.completed_phases_nr.to_f/project.phases_nr)*100}%"
               span.sr-only 66% Complete     
-          small.text-muted Fase 2/3    
+          small.text-muted Fase #{project.next_phase_nr}/#{project.phases_nr}    
