--- a/app/views/subjects/accordion_widget/_show.slim
+++ b/app/views/subjects/accordion_widget/_show.slim
@@ -1,8 +1,11 @@
 li.list-group-item.clearfix
-  .activity-icon.small
-    i.fa.fa-folder
-  .pull-left.m-left-sm
-    span #{subject.name}
-    br
-      small.text-muted
-        i.fa.fa-folder-open-o  #{subject.course.name}
+  .row-widget
+    .icon-widget
+      .activity-icon.small
+        i.fa.fa-folder
+    .info-widget
+      .pull-left.m-left-sm
+        span #{subject.name}
+        br
+          small.text-muted
+            i.fa.fa-folder-open-o  #{subject.course.name}
