--- a/app/views/projects/simple_widget/_show_upcoming.slim
+++ b/app/views/projects/simple_widget/_show_upcoming.slim
@@ -1,24 +1,25 @@
-li.list-group-item.clearfix
-  .row-widget
-    .icon-widget
-      .activity-icon.small class="bg-default"
-        i.fa.fa-file
-    .info-widget
-      .row
-        .col-md-12
-          span #{project.name}
-        .col-md-4
-          small.text-muted
-            i.fa.fa-folder-open-o   
-              b  UC:  
-              = project.subject.name
-        .col-md-4
-          small.text-muted
-            i.fa.fa-clock-o  
-              b  Data início: 
-              = date_or_undef project.begin_date
-        .col-md-4
-          small.text-muted
-            i.fa.fa-clock-o 
-              b  Primeira entrega: 
-              = date_or_undef project.next_delivery
+= link_to project
+  li.list-group-item.clearfix
+    .row-widget
+      .icon-widget
+        .activity-icon.small class="bg-default"
+          i.fa.fa-file
+      .info-widget
+        .row
+          .col-md-12
+            span #{project.name}
+          .col-md-4
+            small.text-muted
+              i.fa.fa-folder-open-o   
+                b  UC:  
+                = project.subject.name
+          .col-md-4
+            small.text-muted
+              i.fa.fa-clock-o  
+                b  Data início: 
+                = date_or_undef project.begin_date
+          .col-md-4
+            small.text-muted
+              i.fa.fa-clock-o 
+                b  Primeira entrega: 
+                = date_or_undef project.next_delivery
