--- a/app/views/projects/simple_widget/_show_active.slim
+++ b/app/views/projects/simple_widget/_show_active.slim
@@ -1,27 +1,28 @@
-li.list-group-item.clearfix
-  .row-widget
-    .icon-widget
-      .activity-icon.small class="bg-warning"
-        i.fa.fa-file
-    .info-widget
-      .row
-        .col-md-12
-          span #{project.name}
-        .col-md-4
-          small.text-muted
-            i.fa.fa-folder-open-o   
-              b  UC:  
-              = project.subject.name
-        .col-md-4
-          small.text-muted
-            i.fa.fa-clock-o  
-              b  Próxima entrega: 
-              = date_or_undef project.next_delivery
-        .col-md-4
-          small.text-muted
-            i.fa.fa-tasks  
-              b  Progresso:
-          .progress.progress-striped.active style="width: 20%; height:8px; margin:0 10px 0 10px; display:inline-block;"
-            .progress-bar style="width: #{(project.completed_phases_nr.to_f/project.phases_nr)*100}%"
-              span.sr-only 66% Complete     
-          small.text-muted Fase #{project.next_phase_nr}/#{project.phases_nr}    
+= link_to project
+  li.list-group-item.clearfix
+    .row-widget
+      .icon-widget
+        .activity-icon.small class="bg-warning"
+          i.fa.fa-file
+      .info-widget
+        .row
+          .col-md-12
+            span #{project.name}
+          .col-md-4
+            small.text-muted
+              i.fa.fa-folder-open-o   
+                b  UC:  
+                = project.subject.name
+          .col-md-4
+            small.text-muted
+              i.fa.fa-clock-o  
+                b  Próxima entrega: 
+                = date_or_undef project.next_delivery
+          .col-md-4
+            small.text-muted
+              i.fa.fa-tasks  
+                b  Progresso:
+            .progress.progress-striped.active style="width: 20%; height:8px; margin:0 10px 0 10px; display:inline-block;"
+              .progress-bar style="width: #{(project.completed_phases_nr.to_f/project.phases_nr)*100}%"
+                span.sr-only 66% Complete     
+            small.text-muted Fase #{project.next_phase_nr}/#{project.phases_nr}    
