--- a/app/views/projects/simple_widget/_show_latest.slim
+++ b/app/views/projects/simple_widget/_show_latest.slim
@@ -1,28 +1,29 @@
-li.list-group-item.clearfix
-  .row-widget
-    .icon-widget
-      .activity-icon.small class="bg-success"
-        i.fa.fa-file
-    .info-widget
-      .row
-        .col-md-12
-          span #{project.name}
-        .col-md-4
-          small.text-muted
-            i.fa.fa-folder-open-o   
-              b  UC:  
-              = project.subject.name
-        .col-md-4
-          small.text-muted
-            i.fa.fa-clock-o  
-              b  Data fim: 
-              = date_or_undef project.end_date
-        .col-md-4
-          small.text-muted
-            i.fa.fa-check  
-              b  Avaliação: 
-              - if project.grades
-                b.text-success #{project.final_grade current_user.student.id} 
-              - else
-                b.text-warning ? 
-              | / 20.0 Valores
+= link_to project
+  li.list-group-item.clearfix
+    .row-widget
+      .icon-widget
+        .activity-icon.small class="bg-success"
+          i.fa.fa-file
+      .info-widget
+        .row
+          .col-md-12
+            span #{project.name}
+          .col-md-4
+            small.text-muted
+              i.fa.fa-folder-open-o   
+                b  UC:  
+                = project.subject.name
+          .col-md-4
+            small.text-muted
+              i.fa.fa-clock-o  
+                b  Data fim: 
+                = date_or_undef project.end_date
+          .col-md-4
+            small.text-muted
+              i.fa.fa-check  
+                b  Avaliação: 
+                - if project.grades
+                  b.text-success #{project.final_grade current_user.student.id} 
+                - else
+                  b.text-warning ? 
+                | / 20.0 Valores
