--- a/app/views/shared/dashboard/_breadcrumb.slim
+++ b/app/views/shared/dashboard/_breadcrumb.slim
@@ -3,5 +3,6 @@
     li
       = link_to dashboard_path
         i.fa.fa-home
-    li.active 
-      = link_to "Painel do #{user.type.capitalize}", dashboard_path
+    - sections.each do |section|
+      li
+        = link_to section[:name], section[:link]
