--- a/app/views/projects/show.slim
+++ b/app/views/projects/show.slim
@@ -10,8 +10,9 @@
       .col-md-8 
         = render "projects/show/utilities", project: @project
         = render "projects/show/description", project: @project
-        = render "projects/show/phases"
+        = render "projects/show/phases", phases: @project.phases
 
       .col-md-4
         = render "notifications/simple_widget", title: "Últimas notificações", notifications: @notifications
-
+        = render "groups/simple_widget", title: "Grupo de trabalho"
+        = render "deliveries/simple_widget", title: "Últimas entregas"
