--- a/app/views/projects/show/_phases.slim
+++ b/app/views/projects/show/_phases.slim
@@ -1,90 +1,54 @@
 .panel.panel-default.fadeInDown.animation-delay2
-  .panel-heading Fases e Entregas
+  .panel-heading Fases do Projeto
   .panel-body
     .timeline-wrapper
-      .timeline-item
-        .timeline-info
-          .timeline-icon.bg-grey
-            i.fa.fa-file-text-o
-          .time
-            | 06:50 Am
-        .panel.panel-default.timeline-panel
-          .panel-heading
-            | John Doe created a new article
-            small.pull-right.text-muted
-              i.fa.fa-clock-o
-              | 5m ago
-          .panel-body
-            p
-              | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit lobortis. Sed quis ipsum risus. Mauris vitae justo non felis pulvinar rhoncus. In quis massa ut risus sagittis luctus.
-            a.btn.btn-xs.btn-default Read more
-            a.btn.btn-xs.btn-default
-              i.fa.fa-reply
-              | Reply
-      .timeline-item
-        .timeline-info
-          .timeline-icon.bg-grey
-            i.fa.fa-picture-o
-          .time
-            | 07:15 Am
-        .panel.panel-default.timeline-panel
-          .panel-heading
-            | John Doe Added photos to the album
-            a href="#"
-          .panel-body
-            a.timeline-img.cboxElement href="img/gallery2.jpg"
-              img alt="Timeline Photo" src="img/gallery2.jpg"
-            a.timeline-img.cboxElement href="img/gallery7.jpg"
-              img alt="Timeline Photo" src="img/gallery7.jpg"
-      .timeline-item
-        .timeline-info
-          .timeline-icon.bg-warning
-            i.fa.fa-briefcase
-          .time
-            | 08:30 Am
-        .panel.panel-default.timeline-panel
-          .panel-heading
-            | Meeting
-            span.label.label-danger.m-left-xs IMPORTANT
-          .panel-body
-            h4 My office
-            span 08:30 Am
-            .seperator
-            .seperator
-            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit lobortis. Sed quis ipsum risus. Mauris vitae justo non felis pulvinar rhoncus. In quis massa ut risus sagittis luctus.
-      .timeline-item
-        .timeline-info
-          .timeline-icon.bg-success
-            i.fa.fa-comment
-          .time
-            | 10:49 Am
-        .panel.panel-default.timeline-panel
-          .panel-heading
-            span.label.label-success.m-left-xs NEW
-            | John Doe comments on your post
-            a href="#"
-          .panel-body
-            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit lobortis. Sed quis ipsum risus.
-            .seperator
-            a.btn.btn-xs.btn-success Reply
-            a.btn.btn-xs.btn-danger
-              i.fa.fa-trash-o
-              | Delete
-      .timeline-date
-        | 3 Oct 2013
-      .timeline-item
-        .timeline-info
-          .timeline-icon.bg-warning
-            i.fa.fa-plane
-          .time
-            | 3:05 Pm
-        .panel.panel-default.timeline-panel
-          .panel-heading
-            | Fly to
-            strong.font-14 London
-          .panel-body
-            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit lobortis. Sed quis ipsum risus.
-      .timeline-item.clearfix
-        .timeline-info
-          .timeline-icon.bg-grey
-            i.fa.fa-pencil
+      .timeline-item.timeline-start
+        .panel.bg-success
+          .panel-body.text-center
+            strong.font-14
+              | Início do Projeto
+            br
+            = date_or_undef phases.first.begin_date
+      - phases.each do |phase|
+        .timeline-item
+          .timeline-info
+            - if phase.end_date < DateTime.now
+              .timeline-icon.bg-success
+                  i.fa.fa-archive
+            - else
+              .timeline-icon.bg-warning
+                i.fa.fa-calendar-o
+            .time #{short_date_or_undef phase.begin_date}
+          .panel.panel-default.timeline-panel
+            .panel-heading
+              strong.font-14 #{phase.name}
+              
+              .pull-right 
+                b Avaliação: 
+                
+                - if phase.grades
+                  span.text-success #{phase.final_grade current_user.student.id} 
+                - else
+                  span.text-warning ?
+                |  / #{(phase.value*20)/100} Valores
+
+            .panel-body
+              p #{raw phase.description.html_safe}
+              .separator.pull-right
+                - if phase.grades
+                  .btn.btn-xs.btn-success style="margin:2px" 
+                    i.fa.fa-check  Pauta
+                - if phase.statement
+                  .btn.btn-xs.btn-primary style="margin:2px" 
+                    i.fa.fa-file-text-o  Enunciado
+                - if phase.deliveries.count > 0
+                  .btn.btn-xs.btn-info style="margin:2px" 
+                    i.fa.fa-archive  Entregas
+      
+      .timeline-item.timeline-start
+        .panel.bg-danger style="margin-bottom:0px;margin-top:10px;"
+          .panel-body.text-center
+            strong.font-14
+              | Fim do Projeto
+            br
+            = date_or_undef phases.last.end_date
