--- a/app/views/notifications/_simple_widget.slim
+++ b/app/views/notifications/_simple_widget.slim
@@ -1,5 +1,8 @@
 .panel.panel-default.fadeInDown.animation-delay2
-  .panel-heading #{title}
+  .panel-heading 
+    = title
+    .pull-right 
+        .btn.btn-primary.btn-xs Todas as notificações
   .panel-body.no-padding
     ul#feedList.list-group.collapse.in
       - if notifications.empty?
