--- a/app/views/projects/show/_description.slim
+++ b/app/views/projects/show/_description.slim
@@ -1,4 +1,4 @@
 .panel.panel-default.fadeInDown.animation-delay2
   .panel-heading Informações do Projeto
   .panel-body.project-info
-    = raw project.description.html_safe
+    = raw project.description.try(:html_safe)
