Informações de uma fase de um projeto

--- a/app/views/deliveries/simple_widget/_empty.slim
+++ b/app/views/deliveries/simple_widget/_empty.slim
@@ -1,1 +1,4 @@
-li.list-group-item.clearfix O seu grupo de trabalho ainda não efetuou nenhuma entrega para este projeto.
+- if mode=="phase"
+  li.list-group-item.clearfix O seu grupo de trabalho ainda não efetuou nenhuma entrega para esta fase.
+- else  
+  li.list-group-item.clearfix O seu grupo de trabalho ainda não efetuou nenhuma entrega para este projeto.
