--- a/app/views/deliveries/_simple_widget.slim
+++ b/app/views/deliveries/_simple_widget.slim
@@ -1,11 +1,14 @@
-.panel.panel-default.fadeInDown.animation-delay2
+- mode ||= "project"
+.panel.panel-default.fadeInDown class="animation-delay#{mode=="phase" ? 1 : 2}"
   .panel-heading
     = title
     .pull-right 
-        .btn.btn-info.btn-xs Gerir entregas
+      - if mode!="phase"
+        = link_to phase_path project.current_or_nearest_phase
+          .btn.btn-info.btn-xs Gerir entregas        
   .panel-body.no-padding
     ul#feedList.list-group.collapse.in
       - if deliveries.empty?
-        = render "deliveries/simple_widget/empty"
+        = render "deliveries/simple_widget/empty", mode: mode
       - else
-        = render "deliveries/simple_widget/index", deliveries: deliveries
+        = render "deliveries/simple_widget/index", deliveries: deliveries, mode: mode
