--- a/app/views/projects/show.slim
+++ b/app/views/projects/show.slim
@@ -9,10 +9,10 @@
     .row
       .col-md-8 
         = render "projects/show/description", project: @project
-        = render "projects/show/phases", project: @project, phases: @phases
+        = render "phases/timeline_widget", title: "Fases do projeto", project: @project, phases: @phases
 
       .col-md-4
         = render "projects/show/utilities", project: @project
         = render "notifications/simple_widget", title: "Últimas notificações", notifications: @notifications
         = render "groups/simple_widget", title: "Grupo de trabalho", group: @group
-        = render "deliveries/simple_widget", title: "Últimas entregas", deliveries: @deliveries
+        = render "deliveries/simple_widget", title: "Últimas entregas", deliveries: @deliveries, project: @project
