--- a/app/views/projects/show/_utilities.slim
+++ b/app/views/projects/show/_utilities.slim
@@ -13,11 +13,12 @@
         .stat-icon
           i.fa.fa-users.fa-2x
 
-    .col-sm-6.col-md-6
-      .panel-stat3.bg-info
-        h5 Entregas
-        .stat-icon
-          i.fa.fa-archive.fa-2x  
+    = link_to phase_path project.current_or_nearest_phase
+      .col-sm-6.col-md-6
+        .panel-stat3.bg-info
+          h5 Fases e entregas
+          .stat-icon
+            i.fa.fa-archive.fa-2x  
     
     .col-sm-6.col-md-6
       .panel-stat3.bg-success
