Changes homepage and adds images on assets

--- a/app/assets/stylesheets/sign.sass
+++ b/app/assets/stylesheets/sign.sass
@@ -1,5 +1,5 @@
 .login-bg
-  background-image: image-url("login-bg.jpg")
+  background-image: image-url("bg-login.jpg")
   background-size: cover
   background-position-x: center
   background-repeat: no-repeat
