Adds slider content

--- a/app/views/pages/_navbar_logged.slim
+++ b/app/views/pages/_navbar_logged.slim
@@ -20,6 +20,6 @@ header.navbar.navbar-fixed-top.bg-white
         li
           a.top-link href="#" Pesquisar projectos
         li 
-          = link_to "Dashboard",dashboard_path, class: "top-link"
+          = link_to "Painel de gestão",dashboard_path, class: "top-link"
         li
           = link_to "Sair", logout_path, class: "top-link"
