--- a/app/views/pages/home.slim
+++ b/app/views/pages/home.slim
@@ -12,15 +12,17 @@
         li.active data-slide-to="0" data-target="#main-slider"
       .carousel-inner
         .item.active
-          img.img-background alt="" src="assets/login-bg.jpg"
+          img.img-background alt="" src="http://cdn01.wallconvert.com/_media/wallpapers_2560x1600/1/2/blurred-rings-14423.jpg"
             .row
               .col-md-6.text-right
-                h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay3 Gestão de Trabalhos Práticos
+                h2.m-top-lg.m-right-md.text-white.fadeInDownLarge.animation-delay3 Acede a partir de qualquer lado!
                 p.text-white.fadeInUpLarge.animation-delay6.m-right-md.hidden-xs
-                  | like a boss.
+                  | Smartphones, Tablets, portáteis
                   br
-                  | Cenas maradas manz!
+                  | acede em qualquer lado com qualquer dispositivo!
                 a.btn.btn-default.btn-lg.fadeInLeftLarge.animation-delay8.m-bottom-lg.m-right-md href="#" Ir para um sítio
+              .col-md-6
+                = image_tag("dashboard-responsive.png", class: "fadeInLeftLarge animation-delay6 m-bottom-lg")
       a.left.carousel-control data-slide="prev" href="#main-slider"
         span.fa.fa-chevron-left
       a.right.carousel-control data-slide="next" href="#main-slider"
