Form de submissão de uma nova entrega

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -12,3 +12,6 @@ a:-webkit-any-link
 .collapsed
   .panel-heading
     border-bottom: 1px solid #f5f5f5 !important
+
+.dz-remove
+  display: none !important
