--- a/app/views/deliveries/simple_widget/_show.slim
+++ b/app/views/deliveries/simple_widget/_show.slim
@@ -4,7 +4,7 @@ li.list-group-item.clearfix
       .activity-icon.bg-success.small
         i.fa.fa-archive
     .info-widget
-      .pull-left.m-left-sm
+      .pull-left.m-left-sm style="width:100%"
         p #{delivery.description}
         small.text-muted
           - if mode != "phase"
