--- a/app/views/phases/show.slim
+++ b/app/views/phases/show.slim
@@ -9,3 +9,5 @@
     .row
       .col-md-8
         = render "phases/accordion_widget", phases: @phases, current_phase: @phase
+      .col-md-4
+        = render "deliveries/new", title: "Submeter nova entrega", project: @project, group: @group
