--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -37,6 +37,14 @@ aside.fixed.skin-6
               i.fa.fa-calendar.fa-lg
             span.text Calendário
             span.menu-hover
+
+        li
+          a href="#"
+            span.menu-icon
+              i.fa.fa-file.fa-lg
+            span.text Projetos
+            span.menu-hover
+
         li
           a href="#"
             span.menu-icon
