--- a/app/views/layouts/_head.slim
+++ b/app/views/layouts/_head.slim
@@ -10,4 +10,4 @@ head
   = stylesheet_link_tag "application"
   = yield(:stylesheets) if content_for?(:stylesheets)
   = javascript_include_tag "application"
-  = csrf_meta_tag
+  = csrf_meta_tags
