--- a/app/views/pages/dashboard.slim
+++ b/app/views/pages/dashboard.slim
@@ -5,7 +5,10 @@
   = render "shared/dashboard/breadcrumb", user: @user, sections: [{name:"Painel do #{@user.type.capitalize}",link: "#"}]
   = render "shared/dashboard/header", header: "Painel do #{@user.type.capitalize}"
   
-  .padding-md    
+  .padding-md   
+    .row
+      .col-md-12
+        = render "shared/messages" 
     .row
       .col-md-8 
         = render "projects/simple_widget", title: "Projetos a decorrer", projects: @projects.active_projects, type: "active"
