Submissão de entrega e ficheiros obrigatórios

--- a/app/views/deliveries/_form.slim
+++ b/app/views/deliveries/_form.slim
@@ -26,6 +26,5 @@ javascript:
   Dropzone.options.deliveryFiles = {
     paramName: "file", // The name that will be used to transfer the file
     maxFilesize: 2, // MB
-    uploadMultiple: true,
-
+    uploadMultiple: true
   };
