--- a/app/views/phase_files/simple_widget/_show.slim
+++ b/app/views/phase_files/simple_widget/_show.slim
@@ -11,4 +11,5 @@ li.list-group-item.clearfix
             = phase_file.document.description
             .pull-right    
               .btn.btn-xs
-                i.fa.fa-download  Download
+                = link_to show_file_path phase_file.document
+                  i.fa.fa-download  Download
